src-ken&y/objects/Transit_Route__c.object
<CustomObject>
    <customHelpPage>HelpTransitRoute</customHelpPage>
    <description>Stores the transit times between &quot;Ship From&quot;  and &quot;Ship To&quot; locations. This will be used to calculate the delivery date of a sales order.</description>
    <fields>
        <fullName>Assessorial_Amount__c</fullName>
        <label>Assessorial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CWT_Factor__c</fullName>
        <label>CWT Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CWT_Rate__c</fullName>
        <formula>( ( Line_Haul_Amount__c + Assessorial_Amount__c ) / CWT_Factor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CWT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The address at which the route for transportation ends.</description>
        <label>Destination</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transit Routes (Inbound)</relationshipLabel>
        <relationshipName>Transit_Routes_Inbound</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distance_Rate__c</fullName>
        <inlineHelpText>Rate used to calculate cost of transit.</inlineHelpText>
        <label>Distance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>The distance (in miles) covered by this route.</description>
        <inlineHelpText>Distance between the Ship-from location and the Ship-to destination.</inlineHelpText>
        <label>Distance (Miles)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Freight_Allowance_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Freight Allowance Rule</label>
        <referenceTo>Allowance_Rule__c</referenceTo>
        <relationshipLabel>Freight Transit Routes</relationshipLabel>
        <relationshipName>Freight_Transit_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fuel_Allowance__c</fullName>
        <label>Fuel Allowance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fuel_Rate__c</fullName>
        <label>Fuel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Haul_Amount__c</fullName>
        <label>Line Haul Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Means_of_Transport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The means of transportation by which the goods will be carried in this route.</description>
        <label>Means of Transport</label>
        <referenceTo>Means_of_Transport__c</referenceTo>
        <relationshipLabel>Transit Routes</relationshipLabel>
        <relationshipName>Transit_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The address from which the route for transportation originates.</description>
        <label>Origin</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transit Routes (Outbound)</relationshipLabel>
        <relationshipName>Transit_Routes_Outbound</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check mark indicates that this is the primary, or preferred, transit route between the origin and destination.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Calendar</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Transit_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transit_Route_Primary_Unique__c</fullName>
        <label>Transit Route Primary Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transit_Route_Unique__c</fullName>
        <description>Stores a key unique to this route to prevent duplicate routes and serve as an external id to load data.</description>
        <externalId>true</externalId>
        <label>Transit Route Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transit_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time (in days) it takes for the shipped goods to reach the destination of this route.</description>
        <inlineHelpText>The number of days it takes for the goods to reach the destination.</inlineHelpText>
        <label>Transit Time (Days)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transit Route</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Origin__c</columns>
        <columns>Destination__c</columns>
        <columns>Means_of_Transport__c</columns>
        <columns>Transit_Time__c</columns>
        <columns>Transit_Route_Unique__c</columns>
        <columns>Fuel_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transit Route</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transit Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>